nuevos cambios en eventos, existe un boton en explorar para entrar y verlos todos, para comentar, calificar y poder reservar si esta activo el evento

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
         <activity
             android:name=".ValidateAccountActivity"
             android:exported="true" />
+        <activity
+            android:name=".EventosProximosActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
